ChangeLog

*********** release of 0.12.2

20080516
	Fixed bug #1838539.

	Petr Kubanek

20080413
	Fixed bug #1940972.

	Petr Kubanek

20071127
	Fixed bug #1838359.

	Petr Kubanek

20071115
	Fixed time.h issues.

	Petr Kubanek

20070709
	Fixed bug in julian_day.c, reported by Michael Richmod.

	Petr Kubanek

20070125
	fixed

	[ 1644739 ] DEC coordinate error in ln_get_equ_pm_epoch

	Petr Kubanek

*********** release of 0.12.1

20070117
	Bug-fix of RST.

	-src/rise_set.c

	check_coords function, rewrite H1 checks, fix some nasty bugs which
	were there.
	
	-lntest/test.c

	Additional tests for RST functions (hyp_future_rst_test).
	Fix RST tests - error will be displayed if libnova calculates wrong
	circumpolar value.

	Petr Kubanek

20070117
	Future functions, which calculated next rises.
	
	-src/rise_set.c
	-src/libnova/rise_set.h

	Add _next_rst_future functions.

	-src/elliptic_motion.c
	-src/libnova/elliptic_motion.h
	-src/parabolic_motion.c
	-src/libnova/parabolic_motion.h
	-src/hyperbolic_motion.c
	-src/libnova/hyperbolic_motion.h

	Add _next functions (and their variants).

	-lntest/test.c

	Add test for new functions (ell_rst_test, body_future_rst_test
	functions).

	Petr Kubanek

20070116
	libnova is now ported to Win32 with the following changes.

	-src/julian_day.c

	Added preprocessing directive for POSIX header (sys/time.h) exclusion	for Win32 compilation.
	Changed ln_get_date_from_sys to be compatible with Win32.

	-src/misc.c

	Added preprocessing directive for POSIX header (unistd.h) exclusion for Win32 compilation.
	Changed libnova.h include to libnova/libnova.h.

	-src/utility.c

	Added preprocessing directive for POSIX header (unistd.h) exclusion for Win32 compilation.
	Added functions gettimeofday, gmtime_r, and strtok_r to substitute for their POSIX coupterparts.
	Added functions cbrt, nan, and round to subsistute, in C89, for their C99 counterparts.

	-src/libnova/ln_types.h
