@@ -1,0 +1,6 @@
+SETUP_EXECUTABLE(asteroid)
+SETUP_EXECUTABLE(comet)
+SETUP_EXECUTABLE(lunar)
+SETUP_EXECUTABLE(mars)
+SETUP_EXECUTABLE(sun)
+SETUP_EXECUTABLE(transforms)
